# work-tools

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
scripts/disk_scanner/: README.md  __init__.py  __main__.py  core.py  display.py  gui.py  index.html  main.py  models.py  utils.py
