[project]
name = "work-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.2.8",
    "loguru",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "setuptools>=83.0.0",
    "tqdm>=4.66.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-kotlin>=1.1.0",
]
